# SchaakPlezier

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BuildAndRun.sh  CMakeLists.txt  Ideas.txt  Ideas2.0.txt  README.md  main.cpp  pyproject.toml  wrappers.pyi
board/: CMakeLists.txt
board/include/: bitboard.h  board.h  definitions.h
board/src/: movegeneration_sliders.cpp
core/: CMakeLists.txt  main.cpp  main.py  settings.json
core/api/: CMakeLists.txt
core/api/include/: bindings.h  pyBoard.h  pyDefinitions.h  pyPlayer.h
core/api/src/: wrappers.cpp
core/api/test/: CMakeLists.txt
core/board/: CMakeLists.txt
core/board/include/: bitboard.h  board.h  definitions.h  log.h  maskgeneration.h  movegeneration.h  types.h
core/board/src/: board.cpp  movegeneration_king.cpp  movegeneration_knight.cpp  movegeneration_pawn.cpp  movegeneration_sliders.cpp
core/board/test/: CMakeLists.txt  test_hash.cpp  test_movegeneration.cpp
core/game/: CMakeLists.txt
core/game/include/: alphabetaplayer.h  evaluation.h  game.h  humanplayer.h  minmaxplayer.h  montecarloplayer.h  player.h  playerfactory.h  randomplayer.h
core/game/src/: game.cpp  humanplayer.cpp  playerfactory.cpp
core/game/test/: CMakeLists.txt  test_1v1.cpp  test_compare_players.cpp  test_regression_players.cpp
core/game/test/regression/white/MinMax/: maxDepth1.json  maxDepth2.json  maxDepth3.json
core/game/test/regression/white/MonteCarlo/: movesPerGame10.json  movesPerGame20.json  movesPerGame30.json  movesPerGame40.json  movesPerGame50.json
core/pygui/: __init__.py  app.py  chessboard.py  main.py  piece.py  wrapper_types.py
core/pygui/components/: __init__.py  analysis_box.py  chessboard_view.py  history_box.py
core/pygui/controller/: __init__.py  config.py  config.toml  controller.py  sound_player.py
core/pygui/model/: __init__.py  chessboard.py  definitions.py  observable.py  piece.py  player.py  wrapper_types.py
core/pygui/objects/: chessboard.py  piece.py  wrapper_types.py
core/pygui/view/: __init__.py  chessboard_view.py  edit_board_dialog.py  edit_fen_dialog.py  edit_players_dialog.py  errordialog.py  history_box.py  observer.py  view.py
core/schaak_plezier/: __init__.py  app.py  config.py  gui.py  log.py  sound_player.py
core/schaak_plezier/assets/config/: config.toml
core/schaak_plezier/controller/: controller.py
core/schaak_plezier/gui/: chessboard_view.py  edit_board_dialog.py  edit_fen_dialog.py  edit_players_dialog.py  errordialog.py  gui.py  history_box.py  sound_player.py
core/schaak_plezier/interface/: app.py  config.py  game.py  log.py  observe.py  player.py  wrapper_types.py
core/schaak_plezier/model/: chessboard.py  piece.py  player.py
core/schaak_plezier/objects/: chessboard.py  player.py
core/schaak_plezier/view/: chessboard_view.py  edit_board_dialog.py  history_box.py  view.py
core/schaak_plezier/widgets/: chessboard_view.py  edit_board_dialog.py  edit_fen_dialog.py  edit_players_dialog.py  errordialog.py  history_box.py  piece.py
game/: CMakeLists.txt
game/include/: humanplayer.h  player.h  playerfactory.h  randomplayer.h
game/src/: game.cpp
include/: bitboard.h  board.h  definitions.h  game.h  humanplayer.h  log.h  maskgeneration.h  movegeneration.h  piece.h  player.h  types.h
notes/: Ideas.txt  Ideas2.0.txt
pygui/: __init__.py  app.py  gui.py  log.py  main.py  sound_player.py
pygui/assets/images/: sources.txt
pygui/objects/: chessboard.py  player.py
pygui/widgets/: chessboard_view.py  edit_board_dialog.py  edit_fen_dialog.py  history_box.py  piece.py
scripts/: BuildAndRunAdvanced.sh  build.bat  build.sh  run.bat  run.sh  run_schaakplezier.bat  run_schaakplezier.sh
src/: bitboard.cpp  board.cpp  game.cpp  humanplayer.cpp  log.cpp  main.cpp  maskgeneration.cpp  movegeneration.cpp  movegeneration_bishop.cpp  movegeneration_king.cpp  movegeneration_knight.cpp  movegeneration_pawn.cpp  movegeneration_queen.cpp  movegeneration_rook.cpp  movegeneration_sliders.cpp  piece.cpp
test/: CMakeLists.txt  test_board.cpp  test_movegeneration.cpp
